Fix misalignment of input fields in editor.html

--- a/recipe.css
+++ b/recipe.css
@@ -5,23 +5,24 @@
   height: max-content;
   justify-content: center;
   margin: 0 auto;
-  max-width: 800px;
   padding: 20px;
+  width: 55%;
 }
 
 .ingredient {
   border: 1px solid #ccc;
+  box-sizing: border-box;
   font-size: 16px;
   margin-bottom: 5px;
   padding: 10px;
-  width: calc(100% - 20px);
+  width: 100%;
 }
 
 #recipe-title {
   border: 1px solid #ccc;
+  box-sizing: border-box;
   font-size: 16px;
   padding: 10px;
-  width: calc(100% - 20px);
 }
 
 .editor-btn {
@@ -33,4 +34,5 @@
   margin-top: 10px;
   padding: 10px;
   text-align: center;
+  width: 100%;
 }
